--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.1.2",
+    "bootstrap": "^5.2.2",
+    "bootstrap-vue": "^2.22.0",
+    "bootstrap-vue-3": "^0.3.12",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13",
+    "pinia": "^2.0.23",
+    "vue": "^3.2.40",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
@@ -18,6 +23,7 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "sass-loader": "^12.0.0",
+    "vue-cli-plugin-pinia": "~0.1.6"
   }
 }
